# therepl

./: .gitignore  README.rst  pyproject.toml  remote-ipython.el  therepl.el  tox.ini
examples/: bar.py  foo.py
ipython_modules/: __init__.py  rpc.py
tests/: test_ipython_modules.py  test_therepl.py  test_utils.py
therepl/: __init__.py  log.py  rpc.py  utils.py
