[tool.poetry]
name = "ipython-modules"
version = "0.1.0"
description = "IPython extension to switch and edit python modules on fly."
authors = ["Alexander Artemenko <svetlyak.40wt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.8"
flask = "^1.1"
[tool.poetry.dev-dependencies]
pytest = "^5.1"
tox = "^3.14"
bumpversion = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
